get functions: Game Details, Team Future Games, Team Old Games, favorite Games
